# mozak-vm

./: .gitattributes  .gitignore  .pre-commit-config.yaml  Cargo.toml  Dockerfile  LICENSE-MIT  Makefile  README.md  book.toml  bors.toml  build-riscv-tests.sh  build_token.sh  build_token_release.sh  flake.nix  foo.markdown  gdb.bash  get_objdump.sh  plan.markdown  problems.markdown  qemu.bash  run_bench  run_examples.py  run_examples.sh  run_tests  rust-toolchain.toml  rustfmt.toml  tape.json  taplo.toml  update_testdata
args/: Cargo.toml
args/src/: bench_args.rs  lib.rs
build-scripts/: Cargo.toml
build-scripts/src/: lib.rs  self_prog_id.rs
circuits/: Cargo.toml  README.md
circuits/benches/: recproof.rs  results.markdown  simple_prover.rs
circuits/derive/: Cargo.toml
circuits/doc/: circuits.mmd
circuits/examples/: poseidon2.rs
circuits/src/: columns_view.rs  cross_table_lookup.rs  degrees.rs  display.rs  expr.rs  fibonacci  generation.rs  lib.rs  linear_combination.rs  linear_combination_typed.rs  linear_combination_x.rs  lookup.rs  multiplicity_view.rs  open_public.rs  public_sub_table.rs  riscv_tests.rs  test_utils.rs  unstark.rs  utils.rs  zero_constraints_stark.rs
circuits/tests/: riscv_tests.rs
circuits3/: Cargo.toml
circuits3/src/: columns_view.rs  config.rs  lib.rs  prover.rs  quotient.rs  utils.rs
cli/: Cargo.toml  build.rs
cli/src/: lib.rs  main.rs  runner.rs  trace_utils.rs
derive-columns-view/: Cargo.toml
derive-columns-view/src/: lib.rs
examples/: .gitignore  1  Cargo.toml  README.md  bar.sh  build-examples.sh  cargo-native  dump  entry-points  entry-points-sorted  iotape.txt  linker.map  pav.sh  programs_map.json  readelf-S  run_examples.sh  state_root.txt  toml  wallet_tfr.tape_bin  wallet_tfr.tape_debug
examples-builder/: Cargo.toml  README.md  build.rs  logs.py
examples-builder/src/: lib.rs
examples/.cargo/: README.txt  config.toml  riscv32im-mozak-mozakvm-elf.json  riscv32im-mozak-mozakvm.ld  riscv32im-mozak-zkvm-elf.json  riscv32im-mozak-zkvm.ld
examples/.tools/: riscv64-unknown-elf-objdump_arm64
examples/amm/: Cargo.toml  core_logic.rs  main_mozak.rs  main_native.rs
examples/bss-tester/: Cargo.toml  README.md  main.rs
examples/counter/: README.md  Readme.md
examples/elf/: yes_man_transition
examples/empty/: Cargo.toml  README.md  main.rs
examples/fibonacci/: Cargo.toml  README.md  main.rs  proof.txt
examples/fibonacci-input/: Cargo.toml  README.md  main.rs
examples/fibonacci-input-new-api/: Cargo.toml  iotape_public  main.rs
examples/inputtape/: Cargo.toml  README.md  build.rs  core_logic.rs  main_mozak.rs  main_native.rs
examples/mem-init/: Cargo.toml  main.rs
examples/memory-access/: Cargo.toml  README.md  main.rs
examples/merkelize/: Cargo.toml  main.rs
examples/merkleproof-trustedroot/: Cargo.toml  README.md  core_logic.rs  dump  main_mozak.rs  main_native.rs  private_input.tape  public_input.tape
examples/min-max/: Cargo.toml  README.md  core_logic.rs  main.rs  main_x86.rs
examples/mozak-poseidon2/: Cargo.toml  main.rs
examples/mozak-sort/: Cargo.toml  main.rs
examples/panic/: Cargo.toml  main.rs
examples/poseidon/: Cargo.toml  main.rs
examples/poseidon2/: Cargo.toml  main.rs
examples/rkyv/: Cargo.toml  README.md  core_logic.rs
examples/rkyv-serialization/: Cargo.toml  README.md  core_logic.rs  main.rs  main_native.rs
examples/scripts/: all_mozakvm_examples  build-mozakvm-examples.sh  run_script.sh  update_progams_map.py
examples/selfcaller/: Cargo.toml  README.md  core_logic.rs  main_native.rs
examples/sha2/: Cargo.toml  main.rs
examples/src/: io.rs  lib.rs
examples/stablecoin/: Cargo.toml  README.md  core_logic.rs  main_mozak.rs
examples/static-mem-access/: Cargo.toml  main.rs
examples/stdin/: Cargo.toml  README.md  core_logic.rs  main.rs  main_native.rs  main_x86.rs
examples/token/: Cargo.toml  README.md  build.rs  core_logic.rs  main_mozak.rs  main_native.rs  token_tfr_bundle.json
examples/vector-alloc/: Cargo.toml  main.rs
examples/wallet/: Cargo.toml  README.md  build.rs  core_logic.rs  main_mozak.rs  main_native.rs  wallet_approve_bundle.json
executor/: Cargo.toml
executor/benches/: fibonacci.elf  fibonacci.rs
executor/tests/: riscv_tests.rs
expr/: Cargo.toml  README.md
expr/src/: basic.rs  lib.rs  ops.rs
field/: Cargo.toml
field/src/: lib.rs
hash/: Cargo.toml
hash/src/: lib.rs
macros/: Cargo.toml
macros/src/: lib.rs
node/: Cargo.toml
node-cli/: Cargo.toml
node-cli/src/: main.rs
node/src/: block_proposer.rs  config.rs  id.rs  lib.rs  main.rs  node.rs  proof.rs  sequencer.rs  stark.rs  types.rs  vm.rs
overseer/: Cargo.toml
overseer/src/: lib.rs  main.rs
perftool/: README.md  config.json  config.py  data.csv  data_1.csv  data_2.csv  path.py  pyproject.toml
perftool/perftool/: config.json  main.py  tests.py  utils.py
perftool/plotter/: plot.py
poseidon2/: Cargo.toml  README.md
poseidon2/src/: lib.rs  mozak_poseidon2.rs
prover-sdk/: Cargo.toml
prover-sdk/src/: lib.rs  prog_id.rs  prog_id_bytes.rs
prover_sdk/: Cargo.toml
recproofs/: Cargo.toml
recproofs/benches/: recproof.rs
recproofs/src/: indices.rs  lib.rs
runner/: Cargo.toml  README.md
runner/benches/: fibonacci.rs
runner/src/: code.rs  decode.rs  ecall.rs  elf.rs  instruction.rs  lib.rs  main.rs  poseidon2.rs  preinit_memory.rs  reg_abi.rs  state.rs  system.rs  test_utils.rs  util.rs  vm.rs
runner/tests/: riscv_tests.rs
sdk/: Cargo.toml
sdk-core-types/: Cargo.toml
sdk-core-types/src/: constants.rs  ecall_id.rs  lib.rs
sdk/.cargo/: config.toml
sdk/src/: account.rs  call_tape_native.rs  call_tape_vm.rs  commit_event_tape.rs  coretypes.rs  cpc.rs  crypto.rs  hash.rs  helpers_native.rs  helpers_vm.rs  id.rs  instruction.rs  io.rs  lib.rs  linker_symbols.rs  mozakvm_calltape.rs  mozakvm_eventtape.rs  mozakvm_helpers.rs  native_calltape.rs  native_eventtape.rs  native_helpers.rs  object.rs  (+13 more)
signatures/: Cargo.toml
simple-display-derive/: Cargo.toml
state/: Cargo.toml
system/: Cargo.toml
vm/: Cargo.toml  README.md  build.rs
(+1140 files in other folders)
