# Project structuring (for node)
# ---------------------------
# The workspace deals with crates for different compilation
# targets, two in particular: `mozak` for zk-platform mozak and `native`.
# `native` targets are supposed to be built for dev machines'
# specifications e.g. `x86_64-unknown-linux-gnu` or `aarch64-apple-darwin`.
# `mozak` targets are supposed to be built with
# `buildtarget/riscv32im-mozak-mozakvm-elf.json` or originally:
# https://github.com/0xmozak/mozak-vm/blob/main/examples/.cargo/riscv32im-mozak-mozakvm-elf.json
#
# The `members` described below list only crates with `native` target
# The `exclude` described below list only crates with `mozak` target
#
# Crates that target `mozak` while live in the same repository, do not form
# the part of this workspace

[workspace]
exclude = ["sdk"]
members = [
  "cli",
  "examples-builder",
  "runner",
  "circuits",
  "node-cli",
  "node",
  "rpc",
  "state",
  "signatures",
  "wasm-demo",
]
resolver = "2"

[profile.dev.package."*"]
# Set the default for dependencies in Development mode.
opt-level = 3
# Try these out:
debug = false # when possible
incremental = false

[profile.dev]
lto = "thin"
# We are running our tests with optimizations turned on to make them faster.
# Please turn optimizations off, when you want accurate stack traces for debugging.
opt-level = 1
# For timing
debug-assertions = false

[profile.release]
lto = "fat"

[profile.bench]
lto = "thin"

[patch.crates-io]
plonky2 = { git = "https://github.com/0xmozak/plonky2.git" }
starky = { git = "https://github.com/0xmozak/plonky2.git" }
