# Project structuring (for node)
# ---------------------------
# The workspace deals with crates for different compilation
# targets, two in particular: `mozak` for zk-platform mozak and `native`.
# `native` targets are supposed to be built for dev machines'
# specifications e.g. `x86_64-unknown-linux-gnu` or `aarch64-apple-darwin`.
# `mozak` targets are supposed to be built with
# `buildtarget/riscv32im-mozak-mozakvm-elf.json` or originally:
# https://github.com/0xmozak/mozak-vm/blob/main/examples/.cargo/riscv32im-mozak-mozakvm-elf.json
#
# The `members` described below list only crates with `native` target
# The `exclude` described below list only crates with `mozak` target
#
# Crates that target `mozak` while live in the same repository, do not form
# the part of this workspace

[workspace]
exclude = ["sdk"]
members = [
  "circuits",
  "cli",
  "examples-builder",
  "expr",
  "node-cli",
  "node",
  "recproofs",
  "rpc",
  "runner",
  "signatures",
  "state",
  "wasm-demo",
]
resolver = "2"

[profile.dev.package."*"]
# Set the default for dependencies in Development mode.
opt-level = 3

[profile.dev]
lto = "thin"
# We are running our tests with optimizations turned on to make them faster.
# Please turn optimizations off, when you want accurate stack traces for debugging.
opt-level = 2

[profile.release]
lto = "fat"

[profile.bench]
lto = "thin"
opt-level = 3

[workspace.dependencies]
plonky2 = { version = "0", default-features = false }
plonky2_maybe_rayon = { version = "0", default-features = false }
starky = { version = "0", default-features = false }

plonky2_crypto = { git = "https://github.com/0xmozak/plonky2-crypto.git" }

[patch.crates-io]
plonky2 = { git = "https://github.com/0xmozak/plonky2.git", branch = "sai/add_batch_prove_openings" }
plonky2_maybe_rayon = { git = "https://github.com/0xmozak/plonky2.git", branch = "sai/add_batch_prove_openings" }
starky = { git = "https://github.com/0xmozak/plonky2.git", branch = "sai/add_batch_prove_openings" }
