[package]
categories = ["cryptography"]
description = "MozakVM circuits"
edition = "2021"
keywords = ["crypto", "zero-knowledge", "vm"]
license = "All rights reserved"
name = "mozak-circuits"
readme = "README.md"
repository = "https://github.com/0xmozak/mozak-vm"
version = "0.1.0"

[dependencies]
anyhow = { version = "1.0", default-features = false }
arrayvec = { version = "0.7", default-features = false }
bitfield = "0.14"
flexbuffers = "2.0"
iter_fixed = "0.3.1"
itertools = "0.12"
log = "0.4"
mozak-circuits-derive = { path = "./derive" }
mozak-runner = { path = "../runner" }
mozak-system = { path = "../system" }
plonky2 = { version = "0.1", default-features = false }
rayon = "1.8"
serde = { version = "1.0", features = ["derive"] }
starky = { version = "0.1", default-features = false }
thiserror = "1.0"
tt-call = "1.0"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
env_logger = { version = "0.10" }
hex = "0.4"
im = "15.1"
mozak-examples = { path = "../examples-builder", features = ["fibonacci"] }
mozak-runner = { path = "../runner", features = ["test"] }
proptest = "1.4"

[features]
default = ["enable_batch_fri"]
enable_batch_fri = []
enable_poseidon_starks = []
enable_register_starks = []
test = []
timing = ["plonky2/timing", "starky/timing"]

[[test]]
name = "riscv_tests"
required-features = ["test"]

[[bench]]
harness = false
name = "simple_prover"
required-features = ["test"]

[[bench]]
harness = false
name = "recproof"
required-features = ["test"]
