[package]
categories = ["cryptography"]
description = "MozakVM circuits"
edition = "2021"
keywords = ["crypto", "zero-knowledge", "vm"]
license = "All rights reserved"
name = "mozak-circuits"
readme = "README.md"
repository = "https://github.com/0xmozak/mozak-vm"
version = "0.1.0"

[dependencies]
anyhow = { version = "1.0", default-features = false }
arrayvec = { version = "0.7", default-features = false }
bitfield = "0.14"
derive_more = { version = "1.0.0-beta.6", features = ["full"] }
enumflags2 = "0.7.9"
iter_fixed = "0.3.1"
itertools = "0.12"
lazy_static = "1.4.0"
log = "0.4"
mozak-circuits-derive = { path = "./derive" }
mozak-runner = { path = "../runner" }
mozak-sdk = { path = "../sdk" }
plonky2 = { version = "0", default-features = false }
# rayon = "1.10"
plonky2_maybe_rayon = { version = "0", default-features = false}
# ["gate_testing", "parallel", "rand_chacha", "std", "timing"]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
starky = { version = "0", default-features = false, features = ["std"] }
thiserror = "1.0"
tt-call = "1.0"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
env_logger = { version = "0.11" }
hex = "0.4"
im = "15.1"
mozak-runner = { path = "../runner", features = ["test"] }
proptest = "1.4"

[features]
enable_poseidon_starks = []
enable_register_starks = []
test = []
timing = ["plonky2/timing", "starky/timing"]

[[test]]
name = "riscv_tests"
required-features = ["test"]

[[bench]]
harness = false
name = "simple_prover"
required-features = ["test"]

[[bench]]
harness = false
name = "recproof"
required-features = ["test"]
