[package]
categories = ["cryptography"]
description = "MozakVM circuits"
edition = "2021"
keywords = ["crypto", "zero-knowledge", "vm"]
license = "All rights reserved"
name = "mozak-circuits"
readme = "README.md"
repository = "https://github.com/0xmozak/mozak-vm"
version = "0.1.0"

[dependencies]
anyhow = { version = "1.0", default-features = false }
arrayvec = { version = "0.7", default-features = false }
bitfield = "0.15"
derive_more = { version = "1.0.0-beta.6", features = ["full"] }
expr = { path = "../expr" }
itertools = "0.12"
log = "0.4"
mozak-circuits-derive = { path = "./derive" }
mozak-runner = { path = "../runner" }
mozak-sdk = { path = "../sdk" }
plonky2 = { workspace = true, default-features = false }
plonky2_maybe_rayon = { workspace = true, default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
starky = { workspace = true, default-features = false, features = ["std"] }
thiserror = "1.0"
tt-call = "1.0"

[dev-dependencies]
criterion = { workspace = true, default-features = false }
env_logger = { version = "0.11" }
hex = "0.4"
im = "15.1"
mozak-runner = { path = "../runner", features = ["test"] }
proptest = "1.4"
rand = "0.8"

[features]
parallel = ["plonky2/parallel", "starky/parallel", "plonky2_maybe_rayon/parallel", "criterion/rayon"]
test = []
timing = ["plonky2/timing", "starky/timing"]

[[test]]
name = "riscv_tests"
required-features = ["test"]

[[bench]]
harness = false
name = "simple_prover"
required-features = ["test"]
