[package]
categories = ["cryptography"]
description = "MozakVM circuits with plonky3"
edition = "2021"
keywords = ["crypto", "zero-knowledge", "vm"]
license = "All rights reserved"
name = "mozak-circuits3"
readme = "README.md"
repository = "https://github.com/0xmozak/mozak-vm"
version = "0.1.0"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mozak-circuits = { path = "../circuits"}
p3-field = { git = "https://github.com/0xmozak/plonky3.git", branch = "kapil/hack_to_pass_degree_bits"}     
p3-matrix = { git = "https://github.com/0xmozak/plonky3.git", branch = "kapil/hack_to_pass_degree_bits"}   
p3-air = { git = "https://github.com/0xmozak/plonky3.git", branch = "kapil/hack_to_pass_degree_bits"}   


[dev-dependencies]
rand = "0.8.5"
p3-goldilocks = { git = "https://github.com/0xmozak/plonky3.git", branch = "kapil/hack_to_pass_degree_bits"}   
p3-fri = { git = "https://github.com/0xmozak/plonky3.git", branch = "kapil/hack_to_pass_degree_bits"}   
p3-keccak = { git = "https://github.com/0xmozak/plonky3.git", branch = "kapil/hack_to_pass_degree_bits"}   
p3-ldt = { git = "https://github.com/0xmozak/plonky3.git", branch = "kapil/hack_to_pass_degree_bits"}   
p3-mds = { git = "https://github.com/0xmozak/plonky3.git", branch = "kapil/hack_to_pass_degree_bits"}   
p3-merkle-tree = { git = "https://github.com/0xmozak/plonky3.git", branch = "kapil/hack_to_pass_degree_bits"}   
p3-poseidon2 = { git = "https://github.com/0xmozak/plonky3.git", branch = "kapil/hack_to_pass_degree_bits"}   
p3-symmetric = { git = "https://github.com/0xmozak/plonky3.git", branch = "kapil/hack_to_pass_degree_bits"}   
p3-uni-stark = { git = "https://github.com/0xmozak/plonky3.git", branch = "kapil/hack_to_pass_degree_bits"} 
p3-challenger = { git = "https://github.com/0xmozak/plonky3.git", branch = "kapil/hack_to_pass_degree_bits"}   
p3-commit = { git = "https://github.com/0xmozak/plonky3.git", branch = "kapil/hack_to_pass_degree_bits"}   
p3-dft = { git = "https://github.com/0xmozak/plonky3.git", branch = "kapil/hack_to_pass_degree_bits"}   
