[package]
categories = ["cryptography"]
description = "MozakVM circuits with plonky3"
edition = "2021"
keywords = ["crypto", "zero-knowledge", "vm"]
license = "All rights reserved"
name = "mozak-circuits3"
readme = "README.md"
repository = "https://github.com/0xmozak/mozak-vm"
version = "0.1.0"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arrayvec = { version = "0.7", default-features = false }
itertools = "0.12.0"
log = "0.4"
mozak-runner = { path = "../runner", features = ["test"] }
p3-air = { git = "https://github.com/Plonky3/Plonky3.git" }
p3-field = { git = "https://github.com/Plonky3/Plonky3.git" }
p3-matrix = { git = "https://github.com/Plonky3/Plonky3.git" }
p3-baby-bear = { git = "https://github.com/Plonky3/Plonky3.git", optional = true  }
p3-challenger = { git = "https://github.com/Plonky3/Plonky3.git" , optional = true }
p3-commit = { git = "https://github.com/Plonky3/Plonky3.git" , optional = true }
p3-dft = { git = "https://github.com/Plonky3/Plonky3.git" , optional = true }
p3-fri = { git = "https://github.com/Plonky3/Plonky3.git" , optional = true }
p3-goldilocks = { git = "https://github.com/Plonky3/Plonky3.git" , optional = true }
p3-keccak = { git = "https://github.com/Plonky3/Plonky3.git" , optional = true }
p3-merkle-tree = { git = "https://github.com/Plonky3/Plonky3.git" , optional = true }
p3-poseidon2 = { git = "https://github.com/Plonky3/Plonky3.git" , optional = true }
p3-symmetric = { git = "https://github.com/Plonky3/Plonky3.git" , optional = true }
p3-uni-stark = { git = "https://github.com/Plonky3/Plonky3.git" , optional = true }
rand = {version = "0.8.5", optional = true }

[dev-dependencies]
proptest = "1.4"

[features]
cli_bench = [
    "p3-baby-bear",
    "p3-challenger",
    "p3-commit",
    "p3-dft",
    "p3-fri",
    "p3-goldilocks",
    "p3-keccak",
    "p3-merkle-tree",
    "p3-poseidon2",
    "p3-symmetric",
    "p3-uni-stark",
    "rand",
]
