[package]
categories = ["cryptography"]
description = "MozakVM cli"
edition = "2021"
keywords = ["crypto", "zero-knowledge", "vm"]
license = "All rights reserved"
name = "mozak-cli"
readme = "README.md"
repository = "https://github.com/0xmozak/mozak-vm"
version = "0.1.0"

[dependencies]
clap = { version = "4.5", features = [
  "derive",
  "cargo",
  "env",
  "unicode",
] }
mozak-circuits = { path = "../circuits", features = ["test"] }
mozak-node = { path = "../node", features = ["std"] }
mozak-runner = { path = "../runner", features = ["test"] }
mozak-sdk = { path = "../sdk", features = ["std"] }
# TODO(Matthias): implement shell completion for CLI via clap_complete
# clap_complete = "4.3"
anyhow = "1.0"
clap-verbosity-flag = "2.2"
clap_derive = "4.5"
clio = { version = "0.3", features = ["clap-parse"] }
env_logger = "0.11"
itertools = "0.12"
log = "0.4"
plonky2 = { version = "0", default-features = false }
rkyv = { version = "=0.8.0-alpha.1", default-features = false, features = ["pointer_width_32", "alloc"] }
rkyv_derive = "=0.8.0-alpha.1"
serde_json = "1.0"
starky = { version = "0", default-features = false }
tempfile = "3"

[dev-dependencies]
mozak-circuits = { path = "../circuits", features = ["test"] }
mozak-runner = { path = "../runner", features = ["test"] }
proptest = "1.4"

[features]
default = ["parallel"]
parallel = ["plonky2/parallel", "starky/parallel", "mozak-circuits/parallel"]
