[package]
categories = ["cryptography"]
description = "MozakVM cli"
edition = "2021"
keywords = ["crypto", "zero-knowledge", "vm"]
license = "All rights reserved"
name = "mozak-cli"
readme = "README.md"
repository = "https://github.com/0xmozak/mozak-vm"
version = "0.1.0"

[dependencies]
anyhow = "1.0"
clio = { version = "0.3" }
env_logger = "0.11"
itertools = "0.12"
log = "0.4"
mozak-circuits = { path = "../circuits", features = ["test"] }
mozak-cli-args = { path = "../args" }
mozak-examples = { path = "../examples-builder", features = ["mozak-sort"] }
mozak-node = { path = "../node", features = ["std"] }
mozak-runner = { path = "../runner", features = ["test"] }
mozak-sdk = { path = "../sdk", features = ["std"] }
plonky2 = { workspace = true, default-features = false }
plonky2_maybe_rayon = { workspace = true, default-features = false }
rkyv = { version = "=0.8.0-alpha.1", default-features = false, features = ["pointer_width_32", "alloc"] }
rkyv_derive = "=0.8.0-alpha.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
starky = { workspace = true, default-features = false }
tempfile = "3"

[dev-dependencies]
# Only as a workaround to be able to control criterion's rayon feature and optional dependency.
criterion = { workspace = true, default-features = false }
mozak-circuits = { path = "../circuits", features = ["test"] }
mozak-runner = { path = "../runner", features = ["test"] }
proptest = "1.4"

[features]
default = ["parallel"]
parallel = ["plonky2/parallel", "starky/parallel", "mozak-circuits/parallel", "criterion/rayon"]
