[package]
categories = ["cryptography"]
description = "MozakVM cli"
edition = "2021"
keywords = ["crypto", "zero-knowledge", "vm"]
license = "All rights reserved"
name = "mozak-cli"
readme = "README.md"
repository = "https://github.com/0xmozak/mozak-vm"
version = "0.1.0"

[dependencies]
clap = { version = "4.5", features = [
  "derive",
  "cargo",
  "env",
  "unicode",
] }
mozak-circuits = { path = "../circuits", features = ["test"] }
mozak-node = { path = "../node", features = ["std"] }
mozak-runner = { path = "../runner", features = ["test"] }
mozak-sdk = { path = "../sdk", features = ["std"] }
# TODO(Matthias): implement shell completion for CLI via clap_complete
# clap_complete = "4.3"
anyhow = "1.0"
clap-verbosity-flag = "2.2"
clap_derive = "4.5"
clio = { version = "0.3", features = ["clap-parse"] }
env_logger = "0.11"
itertools = "0.13"
log = "0.4"
mozak-examples = { path = "../examples-builder", features = ["mozak-sort"] }
plonky2 = { workspace = true, default-features = false }
plonky2_maybe_rayon = { workspace = true, default-features = false }
rkyv = { version = "=0.8.0-alpha.1", default-features = false, features = ["pointer_width_32", "alloc"] }
rkyv_derive = "=0.8.0-alpha.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
starky = { workspace = true, default-features = false }
tempfile = "3"

[dev-dependencies]
# Only as a workaround to be able to control criterion's rayon feature and optional dependency.
criterion = { workspace = true, default-features = false }
mozak-circuits = { path = "../circuits", features = ["test"] }
mozak-runner = { path = "../runner", features = ["test"] }
proptest = "1.4"

[features]
default = []
parallel = ["plonky2/parallel", "starky/parallel", "mozak-circuits/parallel", "criterion/rayon"]
