[package]
categories = ["proc-macro"]
description = "A simple derive macro for columns view"
edition = "2021"
keywords = ["derive", "display", "macro"]
license = "All rights reserved"
name = "derive-columns-view"
readme = "README.md"
repository = "https://github.com/0xmozak/mozak-vm"
version = "0.1.0"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.67"
quote = "1.0.33"
syn = { version = "2.0.37", features = ["full"] }
