[package]
categories = ["cryptography"]
description = "Mozak Examples"
edition = "2021"
keywords = ["crypto", "zero-knowledge", "vm"]
license = "All rights reserved"
name = "mozak-examples"
readme = "README.md"
repository = "https://github.com/0xmozak/mozak-vm"
version = "0.1.0"

[features]
bss-tester = []
empty = []
fibonacci = []
inputtape = []
inputtapebin = []
memory-access = []
min-max = []
mozak-sort = []
panic = []
rkyv-serialization = []
sha2 = []
static-mem-access = []
token = []
# Not sure whether token, tokenbin, wallet and walletbin should all be here, or whether we forget cleaning them up in recent renames?
tokenbin = []
wallet = []
walletbin = []
