[workspace]
members = [
  # Members that depend only on sdk::core
  "bss-tester",
  "fibonacci",
  "min-max",
  "memory-access",
  "panic",
  "static-mem-access",
  "sha2",
  "rkyv-serialization",
  "empty",
  "mozak-sort",

  # Members that depend on more than sdk::core
  "token",
  "wallet",
  "inputtape",
]
resolver = "2"

[profile.release]
codegen-units = 1
lto = "fat"
opt-level = 3
# panic = "abort"
