[workspace]
members = [
  # Members that depend only on sdk::core
  "bss-tester",
  "fibonacci",
  "min-max",
  "memory-access",
  "panic",
  "static-mem-access",
  "sha2",
  "rkyv-serialization",
  "empty",
  "mozak-sort",
  "mozak-poseidon2",

  # Members that depend on more than sdk::core
  "token",
  "wallet",
  "inputtape",
]
resolver = "2"

[profile.dev]
panic = "abort"

[profile.release]
codegen-units = 1
lto = "fat"
opt-level = 3
panic = "abort"

[patch.crates-io]
plonky2 = { git = "https://github.com/0xmozak/plonky2.git" }
plonky2_maybe_rayon = { git = "https://github.com/0xmozak/plonky2.git" }
starky = { git = "https://github.com/0xmozak/plonky2.git" }
