[package]
categories = ["languages"]
description = "A simple DSL"
edition = "2021"
keywords = ["dsl"]
license = "All rights reserved"
name = "expr"
readme = "README.md"
repository = "https://github.com/0xmozak/mozak-vm"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bumpalo = "3.14.0"
