[package]
name = "field"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
p3-field = { git = "https://github.com/Plonky3/Plonky3" }
p3-mersenne-31 = { git = "https://github.com/Plonky3/Plonky3" }
p3-goldilocks = { git = "https://github.com/Plonky3/Plonky3" }
