[package]
edition = "2021"
name = "mozak"
version = "0.1.0"

categories = ["cli", "blockchain"]
description = "Mozak protocol CLI"
keywords = ["crypto", "zero-knowledge", "cli"]
license = "All rights reserved"
readme = "README.md"
repository = "https://github.com/0xmozak/mozak-node"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
mozak-node = { path = "../node" }
