[package]
edition = "2021"
name = "mozak-node"
version = "0.1.0"

categories = ["cryptography", "rpc", "blockchain"]
description = "Mozak protocol node implementation"
keywords = ["crypto", "zero-knowledge", "node"]
license = "All rights reserved"
readme = "README.md"
repository = "https://github.com/0xmozak/mozak-node"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.12.1"
mozak-circuits = { path = '../circuits' }
mozak-sdk = { path = '../sdk' }
plonky2 = { version = "0", default-features = false }
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
mozak-circuits = { path = '../circuits', features = ["test"] }

[features]
default = ["std", "plonky2/default"]
std = ["plonky2/std"]
