[package]
edition = "2021"
name = "mozak-node"
version = "0.1.0"

categories = ["cryptography", "rpc", "blockchain"]
description = "Mozak protocol node implementation"
keywords = ["crypto", "zero-knowledge", "node"]
license = "All rights reserved"
readme = "README.md"
repository = "https://github.com/0xmozak/mozak-node"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.83"
hashbrown = "0.14.5"
itertools = "0.12"
mozak-recproofs = { path = '../recproofs' }
mozak-sdk = { path = '../sdk' }
plonky2 = { workspace = true, default-features = false }
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
mozak-circuits = { path = '../circuits', features = ["test"] }
mozak-recproofs = { path = '../recproofs', features = ["test"] }

[features]
default = ["std"]
std = ["plonky2/std"]
