[package]
categories = ["ci"]
description = "Mozak Overseer: Ensures CI for Mozak"
edition = "2021"
keywords = ["crypto", "zero-knowledge", "vm", "ci"]
license = "All rights reserved"
name = "mozak-overseer"
readme = "README.md"
repository = "https://github.com/0xmozak/mozak-vm"
version = "0.1.0"

[dependencies]
log = "0.4.20"
env_logger = "0.11.2"
toml = "0.5"
regex = "1.5"
once_cell = "1.19.0"
run_script = "0.10.1"
