[package]
categories = ["ci"]
description = "Mozak Overseer: Ensures CI for Mozak"
edition = "2021"
keywords = ["crypto", "zero-knowledge", "vm", "ci"]
license = "All rights reserved"
name = "mozak-overseer"
readme = "README.md"
repository = "https://github.com/0xmozak/mozak-vm"
version = "0.1.0"

[dependencies]
env_logger = "0.11"
log = "0.4.20"
once_cell = "1.19.0"
regex = "1.5"
run_script = "0.10.1"
toml = "0.5"
