[tool.poetry]
name = "perftool"
version = "0.1.0"
description = ""
authors = ["codeblooded1729 <kapilpause007@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
pandas = "^2.1.1"
matplotlib = "^3.8.0"
tqdm = "^4.66.1"
scipy = "^1.11.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
