[package]
name = "poseidon2"
description = "Provides poseidon2 utils for writing programs for mozak platform"
version = "0.1.0"
edition = "2021"
categories = ["development-tools"]
keywords = ["hash"]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/0xmozak/mozak-node/poseidon2"

[dependencies]
[target.'cfg(not(target_os="mozakvm"))'.dependencies]
plonky2 = { git = "https://github.com/0xmozak/plonky2.git", default-features = false }
