[package]
categories = ["development-tools", "zk"]
description = "Provides tools for interacting with the proving system"
edition = "2021"
keywords = ["sdk", "prover"]
license = "Apache-2.0"
name = "mozak-prover-sdk"
readme = "README.md"
repository = "https://github.com/0xmozak/mozak-node/prover_sdk"
version = "0.1.0"
