[package]
categories = ["cryptography"]
description = "MozakVM circuits"
edition = "2021"
keywords = ["crypto", "zero-knowledge", "vm"]
license = "All rights reserved"
name = "mozak-recproofs"
readme = "README.md"
repository = "https://github.com/0xmozak/mozak-vm"
version = "0.1.0"

[dependencies]
anyhow = { version = "1.0", default-features = false }
enumflags2 = "0.7"
iter_fixed = "0.3"
itertools = "0.12"
plonky2 = { workspace = true, default-features = false }

[dev-dependencies]
array-util = "1"
criterion = { workspace = true, default-features = false }
lazy_static = "1.4"
tested-fixture = "1"

[features]
test = ["plonky2/parallel"]

[[bench]]
harness = false
name = "recproof"
required-features = ["test"]
