[package]
categories = ["cryptography"]
description = "RISC V ISA based knowledge argument VM"
edition = "2021"
keywords = ["crypto", "zero-knowledge", "vm"]
license = "All rights reserved"
name = "mozak-runner"
readme = "README.md"
repository = "https://github.com/0xmozak/mozak-vm"
version = "0.1.0"

[dependencies]
anyhow = { version = "1.0", default-features = false }
bitfield = "0.15"
derive_more = { version = "1.0.0-beta.6", features = ["full"] }
elf = { version = "0.7" }
env_logger = { version = "0.11" }
im = "15.1"
itertools = "0.12"
log = "0.4"
mozak-sdk = { path = "../sdk" }
plonky2 = { workspace = true, default-features = false }
proptest = { version = "1.4", optional = true }
serde = { version = "1.0", features = ["derive"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
mimalloc = "0.1"

[dev-dependencies]
criterion = { version = "0.5", default-features = false, features = ["html_reports", "plotters", "cargo_bench_support"] }
mozak-examples = { path = "../examples-builder", features = ["empty", "fibonacci"] }
proptest = "1.4"
serde_json = "1.0"
test-case = "3.3"

[[bench]]
harness = false
name = "fibonacci"

[features]
default = ["std", "im/serde"]
std = ["anyhow/std"]
test = ["proptest"]
parallel = ["plonky2/parallel", "criterion/rayon"]
