[package]
categories = ["development-tools", "zk"]
description = "Provides tools for writing programs for mozak platform"
edition = "2021"
keywords = ["sdk"]
license = "Apache-2.0"
name = "mozak-sdk"
readme = "README.md"
repository = "https://github.com/0xmozak/mozak-node/sdk"
version = "0.2.0"

[dependencies]
itertools = { version = "0.12.1", default-features = false }
once_cell = { version = "1.19.0", default-features = false, features = ["race"] }
rkyv = { version = "0.8.0-alpha.1", default-features = false, features = ["pointer_width_32", "alloc"] }

[target.'cfg(not(target_os="mozakvm"))'.dependencies.toml]
version = "0.8"

[target.'cfg(not(target_os="mozakvm"))'.dependencies.hex]
version = "0.4"

[target.'cfg(not(target_os="mozakvm"))'.dependencies.serde]
features = ["derive"]
version = "1.0"

[target.'cfg(not(target_os="mozakvm"))'.dependencies.serde_json]
version = "1.0.113"

[target.'cfg(not(target_os="mozakvm"))'.dependencies.plonky2]
default-features = false
git = "https://github.com/0xmozak/plonky2.git"

[target.'cfg(not(target_os="mozakvm"))'.dependencies.rand_chacha]
version = "0.3.1"

[target.'cfg(not(target_os="mozakvm"))'.dependencies.rand]
version = "0.8.5"

[target.'cfg(not(target_os="mozakvm"))'.dependencies.serde-hex]
version = "0.1.0"

[features]
default = ["std", "preinitmem_inputtape", "stdread"]

preinitmem_inputtape = []
std = ["plonky2/std"]
stdread = []
